# SonicSVM

./: .gitignore  FINDINGS.md  Makefile  PERFORMANCE.md  README.md  TEST_PLAN.md  conftest.py  pyproject.toml
.agents/skills/ci-watcher/: SKILL.md
.agents/skills/doc-reviewer/: SKILL.md
.agents/skills/failure-analyzer/: SKILL.md
.agents/skills/qa-orchestrator/: SKILL.md
.agents/skills/test-reporter/: SKILL.md
.github/workflows/: performance.yml  qa-analyze.yml  regression.yml  smoke.yml
allure/: categories.json  environment.properties  executor.json
docs/: assignment-spec.md  openapi.json
docs/testcases/: smfs-testcases-detail.md  smfs-testcases-xmind.md  test-execution-report.md
scripts/: analyze_logs.py  analyze_results.py
src/smfs_qa/: __init__.py  client.py  locustfile.py  logger.py  perf.py  schemas.py  solana.py  validators.py  ws_client.py
tests/performance/: conftest.py  test_burst.py  test_concurrent_ws.py  test_latency_under_load.py  test_orders_perf.py  test_rest_latency.py  test_ws_advanced.py  test_ws_throughput.py
tests/rest/: test_docs_endpoints.py  test_error_cases.py  test_error_format.py  test_health.py  test_markets.py  test_method_not_allowed.py  test_orders.py  test_snapshot.py  test_stats.py
tests/solana/: conftest.py  test_reorg.py  test_signature_validation.py  test_slot_ordering.py  test_stream_connect.py  test_stream_ping.py  test_stream_schema.py  test_subscribe.py  test_subscribe_filters.py
tests/websocket/: test_book_delta.py  test_connection.py  test_disconnect.py  test_ping_pong.py  test_reconnection.py  test_sequence.py  test_trades.py
(+11 files in other folders)
